--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Localizing the Map</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6YxAhBsh_ohGtGpl3K1ZtmOQkIW1TTSc&callback=initMap" type="text/javascript"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="./app.js"></script>
   </head>
